# restos

backend/: .env.example  Cargo.toml  docker-compose.yml
backend/src/: jwt.rs  main.rs
backend/src/db/: mod.rs  restaurant.rs  stock.rs  user.rs
backend/src/mutation/: mod.rs
backend/src/mutation/restaurant/model/: address.rs  mod.rs
backend/src/mutation/user/: login.rs  mod.rs  model.rs  register.rs  validator.rs
backend/src/query/: mod.rs
backend/src/query/restaurant/model/: address.rs  contact.rs  mod.rs  restaurant.rs
backend/src/query/stock/: model.rs  query.rs
backend/src/query/user/: model.rs
frontend/: codegen.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: app.d.ts  hooks.server.ts
frontend/src/lib/components/: field-info.svelte  password-input.svelte
frontend/src/lib/graphql/: gql.ts  graphql.ts
frontend/src/lib/server/: auth.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/(auth)/: +layout.server.ts  +layout.svelte
frontend/src/routes/(unauth)/login/: +page.server.ts  +page.svelte
