[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-graphql = { version = "7.0.17", features = ["chrono"] }
async-graphql-axum = "7.0.17"
axum = "0.8.5"
axum-extra = { version = "0.10.3", features = ["cookie"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
hmac = "0.12.1"
jwt = "0.16.0"
scrypt = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
surrealdb = "2.3.10"
time = "0.3.44"
tokio = { version = "1.47.1", features = ["full"] }
